# PostPilot

./: .gitignore  Dockerfile.auth  Dockerfile.main  Dockerfile.postgen  Dockerfile.scraper  README.md  docker-compose.yml  folder_structure.txt  pyproject.toml
data/profile_posts/: profile_rajstriver_20250821_234545.json
services/auth/: requirements.txt
services/auth/app/: main.py
services/auth/app/models/: user.py
services/auth/app/routes/: auth.py
services/auth/app/utils/: auth.py  linkedin.py
services/dashboard/frontend/: next.config.mjs  package-lock.json  package.json
services/dashboard/frontend/src/app/: layout.js
services/main/: .env.docker  requirements.txt
services/main/app/: config.py  main.py
services/main/app/routes/: auth.py  metrics.py  postgen.py  scraper.py
services/main/app/utils/: jwt.py  proxy.py
services/postgen/: requirements.txt
services/postgen/app/: config.py  llm.py  main.py
services/postgen/app/models/: generated_post.py  user_post.py
services/postgen/app/routes/: generate.py
services/postgen/app/utils/: embeddings.py  pinecone.py  prompt.py
services/scraper/: .gitkeep  requirements.txt  state.json
services/scraper/app/: main.py  requirements.txt
services/scraper/app/core/: config.py  database.py
services/scraper/app/db/: mongo_db.py
services/scraper/app/models/: post.py
services/scraper/app/routes/: scraping.py
services/scraper/app/services/: linkedin_bot.py
services/scraper/app/utils/: linkedin_bot.py
shared/: pyproject.toml
shared/db/: mongo_db.py  pg_db.py
(+99 files in other folders)
